--- a/app.json
+++ b/app.json
@@ -11,7 +11,16 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "LSApplicationQueriesSchemes": [
+          "music",
+          "musics",
+          "itms",
+          "itmss",
+          "spotify"
+        ]
+      }
     },
     "android": {
       "adaptiveIcon": {
