fix: Expo Go Google OAuth via AuthSession proxy

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Wavemark",
     "slug": "wavemark-mobile",
+    "owner": "capeparadise",
     "scheme": "wavemark",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
