--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,8 @@
 # Copy to .env.local (never commit secrets)
 EXPO_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT_REF.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=YOUR_ANON_KEY
+# Optional: override Supabase Edge Functions base (otherwise derived from `EXPO_PUBLIC_SUPABASE_URL`)
+# EXPO_PUBLIC_FN_BASE=https://YOUR_PROJECT_REF.functions.supabase.co
 # Optional dev auto-login
 EXPO_PUBLIC_SUPABASE_DEV_EMAIL=dev@example.com
-EXPO_PUBLIC_SUPABASE_DEV_PASSWORD=SuperSecret123!
+EXPO_PUBLIC_SUPABASE_DEV_PASSWORD=YOUR_DEV_PASSWORD
